@@ -132,6 +132,9 @@ Release 2.7.2
     HDFS-9178. Slow datanode I/O can cause a wrong node to be marked
     bad. (Kihwal Lee)
 
+    HDFS-8722. Optimize datanode writes for small writes and flushes.
+    (Kihwal Lee)
+
 Release 2.7.1
 
   INCOMPATIBLE CHANGES
